# glance

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
docs/plans/: 2026-02-01-pr-reviewer-design.md  2026-02-01-pr-reviewer-implementation.md  2026-03-07-codebase-hardening.md  2026-03-08-ticket-provider-trait.md
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: git_provider.rs  github.rs  mod.rs  settings.rs
src-tauri/src/models/: github.rs  linear.rs  mod.rs  provider.rs  review.rs
src-tauri/src/providers/: anthropic.rs  factory.rs  mod.rs  ollama.rs  openai.rs  traits.rs
src-tauri/src/services/: bitbucket.rs  git_provider.rs  github.rs  gitlab.rs  linear.rs  mod.rs  preferences.rs  review.rs  token_manager.rs
src-tauri/src/services/tickets/: asana.rs  github_issues.rs  jira.rs  linear.rs  mod.rs
src/components/: keyboard-shortcuts-overlay.tsx
src/components/layout/: app-shell.tsx  sidebar.tsx
src/components/pr-review/: ai-summary-panel.tsx  (+10 more)
src/hooks/: use-assigned-prs.ts  use-current-user.ts  use-github.ts  use-highlighter.test.ts  use-highlighter.ts  use-keyboard-shortcuts.ts  use-layout-preferences.ts  use-review-draft.ts  use-review.ts  use-settings.ts  use-theme.ts
src/lib/: diff-parser.test.ts  diff-parser.ts  repos-cache.test.ts  repos-cache.ts  review-cache.test.ts  review-cache.ts
src/pages/: assigned.tsx  repos.tsx  review.tsx  settings.tsx
src/types/: index.ts
(+7 files in other folders)
